fixed text-overflow:ellipsis

--- a/chatchatchat/static/css/style.css
+++ b/chatchatchat/static/css/style.css
@@ -126,7 +126,7 @@ h3 {
   margin: 0;
 }
 
-.chat-history-name p {
+.chat-history-name p4 {
   margin: 0;
   font-size: 14px;
 }
